public/css/index.css
#content {
    margin-left: 10%;
    margin-right: 10%;
}

#container {
    width: 100%;
    height: 100%;
}

/*********************
* Main Table CSS
**********************/
#table {
    background: url(../images/table.svg) center no-repeat;
    background-size: contain;
    min-height: 620px;
    border: solid 1px blue;

    overflow: auto;
}

.player {
    position: absolute;

    width: 8%;
    z-index: 1;
}

.player .no-cards {
    /*height: auto;*/ /* compute via JS */
    border-radius: 50%;
}

.player .selected {
    list-style: outside none none;
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: 2%;

    width: 180%;
}

.player .selected .table-card-set {
    display: inline-block;

    position: relative;
    left: -25%;
    padding: 1%;
}

.player .selected li {
    width: 100%;
    padding: 2%;
}

.player .selected img {
    width: 100%;
    height: auto;
    padding: 0;
    margin: 1%;
}

.player .result {
    margin-left: 4%;

    position: absolute;
    top: 35%;
    left: 180%;

    /* make it look like a badge */
    border-radius: 10px;
    font-size: 20px;
}

/* Player 1's circle position */
#p1 {
    left: 45.5%;
    bottom: 15%;
}

/* Player 2's circle position */
#p2 {
    left: 20%;
    bottom: 20%;
}

/* Player 3's circle position */
#p3 {
    left: 20%;
    top: 18%;
}

/* Player 4's circle position */
#p4 {
    left: 45.5%;
    top: 15%;
}

/* Player 5's circle position */
#p5 {
    right: 20%;
    top: 18%;
}

/* Player 6's circle position */
#p6 {
    right: 20%;
    bottom: 20%;
}

.plus-content {
    /* Center the + */
    display: flex;
    align-content: center;
    justify-content: center;
    text-align: center;

    line-height: 95%;
    height: auto;

    /* font style */
    font-size: 75px;
    font-weight: bold;
    color: white;
}

.plus-content .glyphicon-plus {
    width: 50%;
    font-size: 50px;
    margin-left: 4%;
    position: relative;
    height: auto;
}

.selected .card-placeholder {
    height: 100%;
}

#table-cards {
    display: flex;
    flex-direction: row;
    list-style: none;

    position: absolute;
    left: 35%;
    top: 40%;

    padding: 2%;
}

#table-cards li {
    margin-right: 2%;
}

/* Cards On Board */
.table-card-set {
    border: 2px solid #a1a1a1;
    background-color: rgba(200, 200, 200, 0.5);
    border-radius: 10px;
    display: inline-block;
}

.table-card-set .plus-content span {
    font-size: 35px;
}

.table-card .plus-content span {
    margin-left: -20%;
}

.card-placeholder .plus-content span {
    margin-left: -4%;
}

#flop {
    width: 185px;
    height: 80px;
    position: relative;
}

#flop ul {
    display: flex;
    flex-direction: row;
    list-style: outside none none;
    margin: 0 0;
    padding: 2%;
}

#flop ul li {
    margin: 2%;
}

#turn {
    width: 65px;
    height: 80px;
}

#river {
    width: 65px;
    height: 80px;
    position: relative;
}

.table-card {
    width: 50px;
    height: 70px;
    margin: 5px;
}

/*********************
* Sidebar CSS
**********************/
#sidebar {
    position: relative;
    border: 2px solid red;
    float: right;
    height: 100%;
}

#sidebar h2 {
    text-align: center;
    height: 50px;
    background: -webkit-linear-gradient(white, rgba(25, 163, 255, 1)); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(white, rgba(117, 200, 255, 1)); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(white, rgba(117, 200, 255, 1)); /* For Firefox 3.6 to 15 */
    background: linear-gradient(white, rgba(117, 200, 255, 1)); /* Standard syntax */
}

.outputTable {
    padding: 6px;
    margin-left: 2.5%;
    width: 95%;
    margin-right: 2.5%;
}

.outputTable td {
    text-align: right;
}

.outputTable .playerId {
    text-align: center;
}

#output-tables {
    overflow-y: scroll;
    overflow-x: hidden;
}

#output-tables .red {
    color: red;
}

#output-tables .black {
    color: #000000;
}

#output-tables .topRow p {
    padding-left: 2.5%;
    padding-top: 7%;
}

#output-tables .resetBtn {
    margin: 6px;
    padding: 3px 6px;
}

/*********************
* Footer CSS
**********************/
#footer {
    /*position: relative;*/
    /*float: left;*/
    border: 2px solid green;
    /*height: 20%;*/
    /*width: 68%;*/
}

#simulate, #reset {
    float: right;
    margin: 5px;
}

/*********************
* Modal CSS
**********************/

.modal-dialog {
    width: 750px;
    height: 100%;
}

.simple-selection {
    padding: 1%;
}

.card-display {
    padding-bottom: 2%;
}

.card-display img {
    padding-left: 2%;
    padding-bottom: 0.75em;
    width: 18%;
    height: auto;
    cursor: pointer;
}

.card-display img:nth-child(5n) {
    clear: both;
}

.suit-select {
    border-right: 1px solid rgb(229, 229, 229) !important;
    text-align: center;
    cursor: pointer;
}

.suit-select img {
    width: 81%; /* 20% * 9 / 3 - 2% padding */
    height: auto;

}


.card-selection {
    padding-right: 2%;
    display: none;
}

/* All of the cards for a suit: */
.card-select .clubs {
	display: none;
}

.card-select .hearts {
	display: none;
}

.card-select .spades {
    display: none;
}

.card-select .diamonds {
	display: none;
}

.collapse.width {
    height: auto;
    -webkit-transition: width 0.35s ease;
    -moz-transition: width 0.35s ease;
    -o-transition: width 0.35s ease;
    transition: width 0.35s ease;
}

#search {
    background-color: #fff;
    padding:5px;
    border:2px solid #ccc;
    border-radius: 8px;
    margin: 1%;
}

#search:focus {
    border: 2px solid #0097cf;
}

#picked-cards {
    display: flex;
    flex-direction: row;
    margin-top: 2%;

    list-style: none;
    padding-top: 2%;

}

#picked-cards .pick-card {
    width: 85px;
    height: 126px;
    padding-bottom: 2%;

    float: left;
    margin: 5px;
    margin-right: 2%;
}


#picked-cards .pick-card img{
    width: inherit;
    height: inherit;
    margin-top:-10%;
    margin-right:-10%;
}
#picked-cards .pick-card p {
    /* + sign */
    font-size: 50px;
    font-weight: bold;
    color: white;

    text-align: center;
}


#range {
    border:0;
    color:#f6931f;
    font-weight:bold;
    padding-left: 30px;    
}

#slider-range{
    width: 400px;
    margin: 30px;
    background: -webkit-linear-gradient(gray, black); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(gray, black); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(gray, black); /* For Firefox 3.6 to 15 */
    background: linear-gradient(gray, black); /* Standard syntax */
}

.ui-slider-range{
    background: -webkit-linear-gradient(rgba(211, 236, 255, 0.9), rgba(25, 163, 255, 1)); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(rgba(211, 236, 255, 0.9), rgba(117, 200, 255, 1)); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(rgba(211, 236, 255, 0.9), rgba(117, 200, 255, 1)); /* For Firefox 3.6 to 15 */
    background: linear-gradient(rgba(211, 236, 255, 0.9), rgba(117, 200, 255, 1)); /* Standard syntax */
}

#picked-cards .delete-card {
    border-radius: 50%;
    padding: 2.5%;
    font-size: 20px;
    height: 19.1%;
    margin-top: -16%;
    margin-right: -16%;
    float: right;
    display: none;
    /*to show use display: inline-block*/
}

#picked-cards .plus-content{
    float:left;
}

/*********************
* Misc CSS
**********************/
.button {
    border: 2px solid #a1a1a1;
    background: -webkit-linear-gradient(gray, black); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(gray, black); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(gray, black); /* For Firefox 3.6 to 15 */
    background: linear-gradient(gray, black); /* Standard syntax */

    cursor: default;
}


.enabled {
    border: 2px solid #a1a1a1;
    background: -webkit-linear-gradient(rgba(211, 236, 255, 0.9), rgba(25, 163, 255, 1)); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(rgba(211, 236, 255, 0.9), rgba(117, 200, 255, 1)); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(rgba(211, 236, 255, 0.9), rgba(117, 200, 255, 1)); /* For Firefox 3.6 to 15 */
    background: linear-gradient(rgba(211, 236, 255, 0.9), rgba(117, 200, 255, 1)); /* Standard syntax */
    cursor: pointer;
}

.card-select .disabled{
  -webkit-filter: grayscale(100%) contrast(30%);
   -ms-filter: grayscale(100%) contrast(30%);
   filter: grayscale(100%) contrast(30%);
    cursor: not-allowed;
}

